<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stratego</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="new_game">New Game</string>
    <string name="instructions">Instructions</string>
    <string name="about">About</string>
    <string name="chat">Chat</string>
    <string name="online">Online</string>
    <string name="friend">Friend</string>
    <string name="add_friend">Add friend</string>
    <string name="see_stats">See stats</string>
    <string name="achievement">achievement</string>
    <string name="tile_taken">tile taken</string>
    <string name="index_amount_of_pieces">index amount of pieces</string>
    <string name="resource_id">resource name</string>
    <string name="open">open</string>
    <string name="closed">closed</string>
    <string name="is_piece">is piece</string>
    <string name="finish">CONTINUE</string>
    <string name="is_enemy_piece">is Enemy piece</string>
    <string name="is_obstacle">is obstacle</string>
    <string name="is_allowed_tile">is allowed tile</string>
    <string name="total_games">Total games</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="rank">Rank</string>
    <string name="max_rank">Max rank</string>
</resources>
