<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/lobby_background"
        >

    <Button android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/new_game"
            android:background="@drawable/login_button_border"
            android:textColor="#000"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="280dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:onClick="navigateToNewGame"
            />
    <Button android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/instructions"
            android:background="@drawable/login_button_border"
            android:textColor="#000"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            />

    <Button android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/about"
            android:background="@drawable/login_button_border"
            android:textColor="#000"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            />


</LinearLayout>