<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/login_activity_layout"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/background_gradient"
        >
    <ImageView android:layout_width="150dp"
               android:layout_height="100dp"
               android:layout_gravity="center_horizontal"
               android:src="@drawable/stratego"
               android:layout_marginTop="20px"/>
    <EditText android:id="@+id/username"
              android:layout_width="250dp"
              android:layout_height="50dp"
              android:hint="@string/username"
              android:layout_gravity="center_horizontal"
              android:layout_marginTop="20dp"
              android:paddingTop="5dp"
              android:paddingBottom="5dp"
              android:paddingLeft="5dp"
              android:background="@drawable/login_border"
              android:textColor="#000"
              android:inputType="text"
              android:imeOptions="actionNext"
            />
    <EditText android:id="@+id/password"
              android:layout_width="250dp"
              android:layout_height="50dp"
              android:hint="@string/password"
              android:layout_gravity="center_horizontal"
              android:layout_marginTop="20dp"
              android:paddingTop="5dp"
              android:paddingBottom="5dp"
              android:paddingLeft="5dp"
              android:background="@drawable/login_border"
              android:textColor="#000"
              android:password="true"
              android:inputType="textPassword"
              android:imeOptions="actionGo"
            />
    <Button android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:background="@drawable/login_button_border"
            android:onClick="checkCredentials"
            android:text="@string/login"
            android:textColor="#000"/>
    <!--
    <com.example.facebook.widget.LoginButton
            android:id="@+id/authButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            />-->
</LinearLayout>

